--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "eslint-config-standard": "^17.1.0",
+    "flowbite": "^2.1.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-magic-motion": "^1.1.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "sort-by": "^1.2.0"
