--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-magic-motion": "^1.1.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "socket.io-client": "^4.7.2",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
